# archer-market-maker

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
config/: default.toml
src/: config.rs  engine.rs  feed.rs  fills.rs  main.rs  state.rs  strategy.rs
src/archer/: client.rs  ix_builder.rs  math.rs  types.rs
